--- a/genindex.html
+++ b/genindex.html
@@ -780,6 +780,8 @@
 </li>
         <li><a href="generated/pathpy.Network.plot.html#pathpy.Network.plot">(pathpy.Network method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.plot">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
       </ul></li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.pop">pop() (pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
@@ -918,6 +920,8 @@
       <li><a href="generated/pathpy.algorithms.path_extraction.to_path_collection.html#pathpy.algorithms.path_extraction.to_path_collection">to_path_collection() (in module pathpy.algorithms.path_extraction)</a>
 </li>
       <li><a href="generated/pathpy.io.pandas.to_temporal_network.html#pathpy.io.pandas.to_temporal_network">to_temporal_network() (in module pathpy.io.pandas)</a>
+</li>
+      <li><a href="generated/pathpy.Network.to_weighted_network.html#pathpy.Network.to_weighted_network">to_weighted_network() (pathpy.Network class method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
