--- a/_modules/index.html
+++ b/_modules/index.html
@@ -133,6 +133,7 @@
 <li><a href="pathpy/io/sql.html">pathpy.io.sql</a></li>
 <li><a href="pathpy/models/network.html">pathpy.models.network</a></li>
 <li><a href="pathpy/processes/random_walk.html">pathpy.processes.random_walk</a></li>
+<li><a href="pathpy/processes/sampling.html">pathpy.processes.sampling</a></li>
 <li><a href="pathpy/statistics/clustering.html">pathpy.statistics.clustering</a></li>
 <li><a href="pathpy/statistics/degrees.html">pathpy.statistics.degrees</a></li>
 <li><a href="pathpy/statistics/likelihoods.html">pathpy.statistics.likelihoods</a></li>
