--- a/_modules/pathpy/io/csv.html
+++ b/_modules/pathpy/io/csv.html
@@ -164,13 +164,12 @@
                  <span class="n">header</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
                  <span class="n">names</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                  <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Network</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Read network from a csv database.&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot;Reads a network from a csvfile.&quot;&quot;&quot;</span>
     <span class="c1"># pylint: disable=too-many-arguments</span>
 
     <span class="n">frame</span> <span class="o">=</span> <span class="n">read_dataframe</span><span class="p">(</span><span class="n">filename</span><span class="o">=</span><span class="n">filename</span><span class="p">,</span> <span class="n">sep</span><span class="o">=</span><span class="n">sep</span><span class="p">,</span>
                            <span class="n">header</span><span class="o">=</span><span class="n">header</span><span class="p">,</span> <span class="n">names</span><span class="o">=</span><span class="n">names</span><span class="p">)</span>
 
-    <span class="nb">print</span><span class="p">(</span><span class="n">frame</span><span class="p">)</span>
     <span class="n">net</span> <span class="o">=</span> <span class="n">to_network</span><span class="p">(</span><span class="n">frame</span><span class="p">,</span> <span class="n">loops</span><span class="o">=</span><span class="n">loops</span><span class="p">,</span> <span class="n">directed</span><span class="o">=</span><span class="n">directed</span><span class="p">,</span>
                      <span class="n">multiedges</span><span class="o">=</span><span class="n">multiedges</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
