--- a/_modules/pathpy/models/network.html
+++ b/_modules/pathpy/models/network.html
@@ -326,11 +326,7 @@
 <span class="sd">        can be printed to the console.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">summary</span><span class="p">()</span>
-
-    <span class="c1"># def _repr_html_(self):</span>
-    <span class="c1">#     &quot;&quot;&quot;Plot the network in an interactive environment.&quot;&quot;&quot;</span>
-    <span class="c1">#     self.plot()</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">summary</span><span class="p">()</span>    
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">uid</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
@@ -1117,7 +1113,23 @@
         <span class="k">for</span> <span class="n">edge</span> <span class="ow">in</span> <span class="n">temporal_network</span><span class="o">.</span><span class="n">edges</span><span class="o">.</span><span class="n">values</span><span class="p">():</span>
             <span class="n">network</span><span class="o">.</span><span class="n">edges</span><span class="o">.</span><span class="n">_add</span><span class="p">(</span><span class="n">edge</span><span class="p">)</span>
         <span class="n">network</span><span class="o">.</span><span class="n">_add_edge_properties</span><span class="p">()</span>
-        <span class="k">return</span> <span class="n">network</span></div></div>
+        <span class="k">return</span> <span class="n">network</span></div>
+
+<div class="viewcode-block" id="Network.to_weighted_network"><a class="viewcode-back" href="../../../generated/pathpy.Network.to_weighted_network.html#pathpy.Network.to_weighted_network">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="k">def</span> <span class="nf">to_weighted_network</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">network</span><span class="p">:</span> <span class="n">Network</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Discards all multiple edges and adds a weight property that counts the number of </span>
+<span class="sd">        edges between node pairs.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">uid</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s1">&#39;uid&#39;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
+        <span class="n">directed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s1">&#39;directed&#39;</span><span class="p">,</span> <span class="n">network</span><span class="o">.</span><span class="n">directed</span><span class="p">)</span>
+        <span class="n">multiedges</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+
+        <span class="n">weighted</span> <span class="o">=</span> <span class="bp">cls</span><span class="p">(</span><span class="n">uid</span><span class="o">=</span><span class="n">uid</span><span class="p">,</span> <span class="n">directed</span><span class="o">=</span><span class="n">directed</span><span class="p">,</span> <span class="n">multiedges</span><span class="o">=</span><span class="n">multiedges</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">network</span><span class="o">.</span><span class="n">edges</span><span class="p">:</span>
+            <span class="k">if</span> <span class="p">(</span><span class="n">e</span><span class="o">.</span><span class="n">v</span><span class="p">,</span> <span class="n">e</span><span class="o">.</span><span class="n">w</span><span class="p">)</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">weighted</span><span class="o">.</span><span class="n">edges</span><span class="p">:</span>
+                <span class="n">weighted</span><span class="o">.</span><span class="n">add_edge</span><span class="p">(</span><span class="n">e</span><span class="o">.</span><span class="n">v</span><span class="p">,</span> <span class="n">e</span><span class="o">.</span><span class="n">w</span><span class="p">,</span> <span class="n">weight</span><span class="o">=</span><span class="nb">len</span><span class="p">(</span><span class="n">network</span><span class="o">.</span><span class="n">edges</span><span class="p">[(</span><span class="n">e</span><span class="o">.</span><span class="n">v</span><span class="p">,</span> <span class="n">e</span><span class="o">.</span><span class="n">w</span><span class="p">)]))</span>
+        <span class="k">return</span> <span class="n">weighted</span></div></div>
 
 <span class="c1"># =============================================================================</span>
 <span class="c1"># eof</span>
