--- a/_modules/pathpy/processes/random_walk.html
+++ b/_modules/pathpy/processes/random_walk.html
@@ -144,6 +144,8 @@
 
 <span class="kn">from</span> <span class="nn">pathpy.algorithms.matrices</span> <span class="kn">import</span> <span class="n">adjacency_matrix</span>
 
+<span class="kn">from</span> <span class="nn">.sampling</span> <span class="kn">import</span> <span class="n">VoseAliasSampling</span>
+
 <span class="c1"># create custom types</span>
 <span class="n">Weight</span> <span class="o">=</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">bool</span><span class="p">,</span> <span class="kc">None</span><span class="p">]</span>
 
@@ -177,99 +179,6 @@
     <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractproperty</span>
     <span class="k">def</span> <span class="nf">state</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Abstract state property.&quot;&quot;&quot;</span></div>
-
-
-<div class="viewcode-block" id="VoseAliasSampling"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling">[docs]</a><span class="k">class</span> <span class="nc">VoseAliasSampling</span><span class="p">:</span>    
-    <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Implementation of fast biased sampling from a discrete distribution</span>
-<span class="sd">    of values [0, ..., n]</span>
-<span class="sd">    </span>
-<span class="sd">    For explanation see https://www.keithschwarz.com/darts-dice-coins/</span>
-
-<span class="sd">    Parameters</span>
-<span class="sd">    ----------</span>
-
-<span class="sd">    weights: Union[np.array, list]</span>
-
-<span class="sd">        relative weights of the n events, where weights[i] is the relative </span>
-<span class="sd">        statistical weight of event i. The weights do not need to be </span>
-<span class="sd">        normalized. </span>
-<span class="sd">        </span>
-<span class="sd">        For an array with length n, generated random values </span>
-<span class="sd">        will be from range(n).</span>
-<span class="sd">        </span>
-<span class="sd">    See Also</span>
-<span class="sd">    --------</span>
-<span class="sd">    RandomWalk</span>
-
-<span class="sd">    Examples</span>
-<span class="sd">    --------</span>
-<span class="sd">    Create a VoseAliasSampling instance</span>
-
-<span class="sd">    &gt;&gt;&gt; from pathpy.processes.RandomWalk import VoseAliasSampling</span>
-<span class="sd">    &gt;&gt;&gt; sampler = VoseAliasSampling([1,1,2])</span>
-<span class="sd">    </span>
-<span class="sd">    Fast biased sampling in O(1)</span>
-<span class="sd">    </span>
-<span class="sd">    &gt;&gt;&gt; [ sampler.sample() for i in range(10) ]</span>
-<span class="sd">    [ 0 2 0 1 2 1 2 1 2 0 2 2 ] </span>
-<span class="sd">    &quot;&quot;&quot;</span>
-
-<div class="viewcode-block" id="VoseAliasSampling.__init__"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">weights</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">,</span> <span class="nb">list</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Initializes probability and alias tables</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">n</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">weights</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">probs</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">aliases</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
-
-        <span class="n">small</span> <span class="o">=</span> <span class="nb">list</span><span class="p">()</span>
-        <span class="n">large</span> <span class="o">=</span> <span class="nb">list</span><span class="p">()</span>
-
-        <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">n</span><span class="o">+</span><span class="mi">1</span><span class="p">):</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">probs</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">weights</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">n</span><span class="o">*</span><span class="n">weights</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">&gt;</span><span class="mi">1</span><span class="p">:</span>
-                <span class="n">large</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">i</span><span class="p">)</span>
-            <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">&lt;=</span><span class="mi">1</span><span class="p">:</span>
-                <span class="n">small</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">i</span><span class="p">)</span>
-
-        <span class="k">while</span> <span class="n">small</span> <span class="ow">and</span> <span class="n">large</span><span class="p">:</span>
-            <span class="n">l</span> <span class="o">=</span> <span class="n">small</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
-            <span class="n">g</span> <span class="o">=</span> <span class="n">large</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
-
-            <span class="bp">self</span><span class="o">.</span><span class="n">probs</span><span class="p">[</span><span class="n">l</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">l</span><span class="p">]</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">aliases</span><span class="p">[</span><span class="n">l</span><span class="p">]</span> <span class="o">=</span> <span class="n">g</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">g</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">l</span><span class="p">]</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">g</span><span class="p">]</span> <span class="o">-</span><span class="mi">1</span>
-
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">scaled_probs</span><span class="p">[</span><span class="n">g</span><span class="p">]</span> <span class="o">&lt;</span> <span class="mi">1</span><span class="p">:</span>
-                <span class="n">small</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">g</span><span class="p">)</span>
-            <span class="k">else</span><span class="p">:</span>
-                <span class="n">large</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">g</span><span class="p">)</span>
-        <span class="k">while</span> <span class="n">large</span><span class="p">:</span>
-            <span class="n">g</span> <span class="o">=</span> <span class="n">large</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">probs</span><span class="p">[</span><span class="n">g</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span>
-        <span class="k">while</span> <span class="n">small</span><span class="p">:</span>
-            <span class="n">l</span> <span class="o">=</span> <span class="n">small</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">probs</span><span class="p">[</span><span class="n">l</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span></div>
-
-<div class="viewcode-block" id="VoseAliasSampling.sample"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling.sample">[docs]</a>    <span class="k">def</span> <span class="nf">sample</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Biased sampling of discrete value in O(1)</span>
-
-<span class="sd">        Returns</span>
-<span class="sd">        -------</span>
-<span class="sd">            integer value from range(n), where n is the length </span>
-<span class="sd">            of the weight array used to create the instance.</span>
-
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">i</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">n</span><span class="o">+</span><span class="mi">1</span><span class="p">)</span>
-        <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">rand</span><span class="p">()</span>
-        <span class="k">if</span> <span class="n">x</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">probs</span><span class="p">[</span><span class="n">i</span><span class="p">]:</span>
-            <span class="k">return</span> <span class="n">i</span><span class="o">-</span><span class="mi">1</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">aliases</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">-</span><span class="mi">1</span></div></div>
 
 
 <div class="viewcode-block" id="RandomWalk"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk">[docs]</a><span class="k">class</span> <span class="nc">RandomWalk</span><span class="p">(</span><span class="n">BaseWalk</span><span class="p">):</span>
@@ -673,7 +582,12 @@
             <span class="k">elif</span> <span class="nb">type</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_network</span><span class="p">)</span> <span class="o">==</span> <span class="n">HigherOrderNetwork</span><span class="p">:</span>
                 <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_current_node</span><span class="o">.</span><span class="n">nodes</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">uid</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="k">raise</span> <span class="ne">AttributeError</span><span class="p">(</span><span class="s1">&#39;Unknown network of type </span><span class="si">{0}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_network</span><span class="p">)))</span></div></div>
+                <span class="k">raise</span> <span class="ne">AttributeError</span><span class="p">(</span><span class="s1">&#39;Unknown network of type </span><span class="si">{0}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_network</span><span class="p">)))</span></div>
+                
+<div class="viewcode-block" id="RandomWalk.plot"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.plot">[docs]</a>    <span class="k">def</span> <span class="nf">plot</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s1">&#39;Plotting of dynamical processes is not yet supported&#39;</span><span class="p">)</span></div></div>
 </pre></div>
 
     </div>
