new processes module

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -132,6 +132,7 @@
 <li><a href="pathpy/io/pandas.html">pathpy.io.pandas</a></li>
 <li><a href="pathpy/io/sql.html">pathpy.io.sql</a></li>
 <li><a href="pathpy/models/network.html">pathpy.models.network</a></li>
+<li><a href="pathpy/processes/process.html">pathpy.processes.process</a></li>
 <li><a href="pathpy/processes/random_walk.html">pathpy.processes.random_walk</a></li>
 <li><a href="pathpy/processes/sampling.html">pathpy.processes.sampling</a></li>
 <li><a href="pathpy/statistics/clustering.html">pathpy.statistics.clustering</a></li>
