--- a/genindex.html
+++ b/genindex.html
@@ -147,8 +147,6 @@
 </li>
         <li><a href="generated/pathpy.Path.html#pathpy.Path.__init__">(pathpy.Path method)</a>
 </li>
-        <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.__init__">(pathpy.processes.random_walk.BaseWalk method)</a>
-</li>
         <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.__init__">(pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
         <li><a href="generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling.__init__">(pathpy.processes.random_walk.VoseAliasSampling method)</a>
@@ -200,10 +198,6 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk">BaseWalk (class in pathpy.processes.random_walk)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.algorithms.centralities.betweenness_centrality.html#pathpy.algorithms.centralities.betweenness_centrality">betweenness_centrality() (in module pathpy.algorithms.centralities)</a>
 
       <ul>
@@ -228,6 +222,8 @@
         <li><a href="generated/pathpy.Network.closeness_centrality.html#pathpy.Network.closeness_centrality">(pathpy.Network method)</a>
 </li>
       </ul></li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.compute_transition_matrix">compute_transition_matrix() (pathpy.processes.random_walk.RandomWalk static method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.contain">contain() (pathpy.statistics.subpaths.SubPathCollection method)</a>
@@ -380,20 +376,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.generators.random_graphs.generate_degree_sequence.html#pathpy.generators.random_graphs.generate_degree_sequence">generate_degree_sequence() (in module pathpy.generators.random_graphs)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.generate_walk">generate_walk() (pathpy.processes.random_walk.BaseWalk method)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.generate_walk">(pathpy.processes.random_walk.RandomWalk method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.generate_walks">generate_walks() (pathpy.processes.random_walk.BaseWalk method)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.generate_walks">(pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.get_path">get_path() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
-      </ul></li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.get_paths">get_paths() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -406,9 +394,11 @@
 </li>
       <li><a href="generated/pathpy.Network.indegrees.html#pathpy.Network.indegrees">indegrees() (pathpy.Network method)</a>
 </li>
+      <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.index">index() (pathpy.statistics.subpaths.SubPathCollection property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.index">index() (pathpy.statistics.subpaths.SubPathCollection property)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.init">init() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       <li><a href="generated/pathpy.Network.is_connected.html#pathpy.Network.is_connected">is_connected() (pathpy.Network property)</a>
 </li>
@@ -464,10 +454,6 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.matrix">matrix() (pathpy.processes.random_walk.RandomWalk property)</a>
-</li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.matrix_pd">matrix_pd() (pathpy.processes.random_walk.RandomWalk method)</a>
-</li>
       <li><a href="generated/pathpy.generators.random_graphs.max_edges.html#pathpy.generators.random_graphs.max_edges">max_edges() (in module pathpy.generators.random_graphs)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.components.mean_component_size.html#pathpy.algorithms.components.mean_component_size">mean_component_size() (in module pathpy.algorithms.components)</a>
@@ -565,9 +551,9 @@
 </li>
       <li><a href="generated/pathpy.Network.html#pathpy.Network">Network (class in pathpy)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.network">network() (pathpy.processes.random_walk.RandomWalk property)</a>
-</li>
       <li><a href="generated/pathpy.Node.html#pathpy.Node">Node (class in pathpy)</a>
+</li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.node_state">node_state() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       <li><a href="generated/pathpy.Edge.nodes.html#pathpy.Edge.nodes">nodes() (pathpy.Edge property)</a>
 
@@ -701,8 +687,6 @@
         <li><a href="generated/pathpy.io.graphml.html#module-pathpy.io.graphml">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pathpy.io.graphtool
 
@@ -710,6 +694,8 @@
         <li><a href="generated/pathpy.io.graphtool.html#module-pathpy.io.graphtool">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pathpy.io.konect
 
@@ -783,6 +769,8 @@
         <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.plot">(pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       </ul></li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.plot_first_order">plot_first_order() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.pop">pop() (pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.possible">possible() (pathpy.statistics.subpaths.SubPathCollection property)</a>
@@ -809,6 +797,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.random_seed">random_seed() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk">RandomWalk (class in pathpy.processes.random_walk)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.centralities.rank_centralities.html#pathpy.algorithms.centralities.rank_centralities">rank_centralities() (in module pathpy.algorithms.centralities)</a>
@@ -857,6 +847,8 @@
 </li>
       <li><a href="generated/pathpy.Network.remove_nodes.html#pathpy.Network.remove_nodes">remove_nodes() (pathpy.Network method)</a>
 </li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.run_experiment">run_experiment() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -869,19 +861,19 @@
 </li>
       <li><a href="generated/pathpy.algorithms.shortest_paths.shortest_path_tree.html#pathpy.algorithms.shortest_paths.shortest_path_tree">shortest_path_tree() (in module pathpy.algorithms.shortest_paths)</a>
 </li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.simulation_run">simulation_run() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
       <li><a href="generated/pathpy.algorithms.shortest_paths.single_source_shortest_paths.html#pathpy.algorithms.shortest_paths.single_source_shortest_paths">single_source_shortest_paths() (in module pathpy.algorithms.shortest_paths)</a>
 </li>
       <li><a href="generated/pathpy.Path.start.html#pathpy.Path.start">start() (pathpy.Path property)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.state">state() (pathpy.processes.random_walk.BaseWalk property)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.state">(pathpy.processes.random_walk.RandomWalk property)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.state_to_color">state_to_color() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
-      </ul></li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.stationary_state">stationary_state() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.stationary_probabilities">stationary_probabilities() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.step">step() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection">SubPathCollection (class in pathpy.statistics.subpaths)</a>
 </li>
@@ -905,12 +897,8 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.t">t() (pathpy.processes.random_walk.BaseWalk property)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.t">(pathpy.processes.random_walk.RandomWalk property)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.time">time() (pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
-      </ul></li>
       <li><a href="generated/pathpy.io.pandas.to_dataframe.html#pathpy.io.pandas.to_dataframe">to_dataframe() (in module pathpy.io.pandas)</a>
 </li>
       <li><a href="generated/pathpy.io.pandas.to_network.html#pathpy.io.pandas.to_network">to_network() (in module pathpy.io.pandas)</a>
@@ -923,14 +911,14 @@
 </li>
       <li><a href="generated/pathpy.Network.to_weighted_network.html#pathpy.Network.to_weighted_network">to_weighted_network() (pathpy.Network class method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.Path.tolist.html#pathpy.Path.tolist">tolist() (pathpy.Path method)</a>
 
       <ul>
         <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.tolist">(pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.total_variation_distance">total_variation_distance() (pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.evaluation.train_test_split.html#pathpy.algorithms.evaluation.train_test_split">train_test_split() (in module pathpy.algorithms.evaluation)</a>
@@ -938,12 +926,16 @@
       <li><a href="generated/pathpy.Network.transition_matrix.html#pathpy.Network.transition_matrix">transition_matrix() (pathpy.Network method)</a>
 
       <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.transition_matrix">(pathpy.processes.random_walk.RandomWalk static method)</a>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.transition_matrix">(pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
       </ul></li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.transition_matrix_pd">transition_matrix_pd() (pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.transition_probabilities">transition_probabilities() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.trees.tree_size.html#pathpy.algorithms.trees.tree_size">tree_size() (in module pathpy.algorithms.trees)</a>
+</li>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.TVD">TVD() (pathpy.processes.random_walk.RandomWalk static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -989,7 +981,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.visitation_frequencies">visitation_frequencies() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.visitation_frequencies">visitation_frequencies() (pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.visitation_probabilities">visitation_probabilities() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
@@ -1003,18 +995,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.Edge.w.html#pathpy.Edge.w">w() (pathpy.Edge property)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.walk">walk() (pathpy.processes.random_walk.BaseWalk method)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.walk">(pathpy.processes.random_walk.RandomWalk method)</a>
-</li>
-      </ul></li>
-      <li><a href="generated/pathpy.processes.random_walk.BaseWalk.html#pathpy.processes.random_walk.BaseWalk.walk_step">walk_step() (pathpy.processes.random_walk.BaseWalk method)</a>
-
-      <ul>
-        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.walk_step">(pathpy.processes.random_walk.RandomWalk method)</a>
-</li>
-      </ul></li>
       <li><a href="generated/pathpy.generators.random_graphs.Watts_Strogatz.html#pathpy.generators.random_graphs.Watts_Strogatz">Watts_Strogatz() (in module pathpy.generators.random_graphs)</a>
 </li>
       <li><a href="generated/pathpy.Edge.weight.html#pathpy.Edge.weight">weight() (pathpy.Edge method)</a>
